Feature/error (#184)
* error